# yamljson

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_cli.py  test_converter.py
yamljson/: __init__.py  cli.py  converter.py
